more images includes fix for image whitespace inline-block bug

--- a/src/imageProcessor/ImageProcessor.css
+++ b/src/imageProcessor/ImageProcessor.css
@@ -16,6 +16,7 @@
 }
 
 .image-area > img {
+    display: block;
     width: 100%;
 }
 
